fixed overflow issue

--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,6 +1,8 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@197&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@197&family=Montserrat:wght@500&display=swap'); */
-
+*{
+    overflow-x: hidden;
+}
 
 .abtContent{
     display: flex;
